# ByeByeDPI-x-tg

./: .gitignore  AUTHORS.md  NOTICE  README-en.md  README-tr.md  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/io/github/romanvht/byedpi/activities/: BaseActivity.kt  MainActivity.kt  TestActivity.kt
app/src/main/java/io/github/romanvht/byedpi/core/: ByeDpiProxyPreferences.kt
app/src/main/java/io/github/romanvht/byedpi/ewenloy/tgws/: EwenloyMtProtoParser.kt  EwenloyRawWebSocket.kt  EwenloyTelegramRanges.kt  EwenloyTgWsProxyServer.kt  EwenloyTgWsServiceExtension.kt
app/src/main/java/io/github/romanvht/byedpi/fragments/: ByeDpiUISettingsFragment.kt  MainSettingsFragment.kt
app/src/main/java/io/github/romanvht/byedpi/receiver/: BootReceiver.kt
app/src/main/java/io/github/romanvht/byedpi/services/: ByeDpiProxyService.kt  ByeDpiVpnService.kt  QuickTileService.kt
app/src/main/java/io/github/romanvht/byedpi/utility/: NotificationUtils.kt
app/src/main/res/layout/: activity_main.xml  activity_proxy_test.xml
app/src/main/res/values/: arrays.xml  strings.xml
app/src/main/res/xml/: byedpi_ui_settings.xml  main_settings.xml
